<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/rsud_cileugsi"
        android:contentDescription="@string/logo_rsud" />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Hi.. Joko Purnomo, S.Kom"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <DigitalClock
        android:id="@+id/tv_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:format24Hour="hh:mm:ss"
        android:timeZone="UTC+7"
        android:textColor="@color/grey"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_checkin"
        android:background="@drawable/btn_login"
        app:cornerRadius="10dp"
        android:text="@string/masuk"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_clock"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_checkout"
        android:background="@drawable/btn_checkout"
        app:cornerRadius="10dp"
        android:text="@string/pulang"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_checkin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:background="@drawable/btn_logout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        app:cornerRadius="10dp"
        android:text="@string/logout"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.98" />

<!--    <TextView-->
<!--        android:id="@+id/tv_copyright"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:textAlignment="center"-->
<!--        android:text="@string/tv_copyright"-->
<!--        app:layout_constraintHorizontal_bias="0.05"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>